--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -15,8 +15,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Install Node
-      uses: npm install
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
     - name: Run clean install
       uses: npm ci
     - name: Build release binary
