Fixed typo in command

--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -3,7 +3,7 @@ name: Build to DOM Cloud
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 env:
@@ -30,4 +30,4 @@ jobs:
     - name: Copy to Remote Server
       run: >-
         mkdir -p $HOME/.ssh; (echo "${{ secrets.SSH_KEY }}" > $HOME/.ssh/id_rsa); chmod 0600 $HOME/.ssh/id_rsa;
-        ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa -r dist/* ${{ env.SERVER_HOST }}:./public_html;
+        scp -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa -r dist/* ${{ env.SERVER_HOST }}:./public_html;
