--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -29,5 +29,5 @@ jobs:
       # 4. Also copy static files also needed by the binaries
     - name: Copy to Remote Server
       run: >-
-        mkdir -p $HOME/.ssh; (echo "${{ secrets.SSH_KEY }}" > $HOME/.ssh/id_rsa); chmod 0600 $HOME/.ssh/id_rsa;
+        mkdir -p $HOME/.ssh; printf "%s" "${{ secrets.SSH_KEY }}" > $HOME/.ssh/id_rsa; chmod 0600 $HOME/.ssh/id_rsa;
         scp -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa -r dist/* ${{ env.SERVER_HOST }}:./public_html;
