--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -27,6 +27,8 @@ jobs:
       # 2. Kill the app (unlocks the binary for writing)
       # 3. Copy app binary to server
       # 4. Also copy static files also needed by the binaries
+    - name: Test SSH Key
+      run: ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -T ${{ env.SERVER_HOST }} || true
     - name: Copy to Remote Server
       run: >-
         mkdir -p $HOME/.ssh; printf "%s" "${{ secrets.SSH_KEY }}" > $HOME/.ssh/id_rsa; chmod 0600 $HOME/.ssh/id_rsa;
