--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -27,9 +27,13 @@ jobs:
       # 2. Kill the app (unlocks the binary for writing)
       # 3. Copy app binary to server
       # 4. Also copy static files also needed by the binaries
-    - name: Test SSH Key
-      run: ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -T ${{ env.SERVER_HOST }} || true
-    - name: Copy to Remote Server
-      run: >-
-        mkdir -p $HOME/.ssh; printf "%s" "${{ secrets.SSH_KEY }}" > $HOME/.ssh/id_rsa; chmod 0600 $HOME/.ssh/id_rsa;
-        scp -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa -r dist/* ${{ env.SERVER_HOST }}:./public_html;
+    - name: Setup SSH
+      run: |
+        mkdir -p ~/.ssh
+        printf "%s" "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+    - name: Test SSH Connection
+      run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ env.SERVER_HOST }} "echo SSH OK"
+    - name: Deploy Astro Build
+      run: |
+        scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r dist/. ${{ env.SERVER_HOST }}:public_html/
