--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -32,6 +32,10 @@ jobs:
         mkdir -p ~/.ssh
         printf "%s" "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
+    - name: Debug SSH
+      run: |
+        ls -la ~/.ssh
+        ssh -vvv -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ env.SERVER_HOST }} "echo SSH OK"
     - name: Test SSH Connection
       run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ env.SERVER_HOST }} "echo SSH OK"
     - name: Deploy Astro Build
