--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Setup SSH
       run: |
         mkdir -p ~/.ssh
-        printf "%s" "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_KEY_B64 }}" | base64 -d > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
     - name: Debug SSH
       run: |
