--- a/.github/workflows/domcloud.yaml
+++ b/.github/workflows/domcloud.yaml
@@ -35,10 +35,10 @@ jobs:
     - name: Validate SSH Key Format
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_KEY_B64 }}" | base64 -d > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
+        echo "${{ secrets.SSH_KEY_B64 }}" | base64 -d > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
 
-        ssh-keygen -l -f ~/.ssh/id_ed25519 || echo "Key unreadable"
+        ssh-keygen -l -f ~/.ssh/id_rsa || echo "Key unreadable"
     - name: Debug SSH
       run: |
         ls -la ~/.ssh
